# Narada-Env

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Blog.md  CLAUDE.md  Dockerfile  Guidlines.txt  NARADA_CLAUDE_CODE_PROMPT.md  README.md  benchmark.py  inference.py  openenv.yaml  plot_results.py  pyproject.toml  requirements.txt
data/: clinvar_pathogenic.tsv  hp.obo
scripts/: export_neo4j.py  filter_clinvar.py  test_env.py
server/: app.py
src/envs/clindetect/: case_generator.py  client.py  graph.py  models.py
src/envs/clindetect/server/: app.py  environment.py
src/envs/narada/: case_generator.py  client.py  graph.py  models.py
src/envs/narada/server/: app.py  environment.py
training/: Dockerfile  narada_grpo.ipynb  narada_grpo_colab.ipynb  train.py
