[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "narada"
version = "1.0.0"
description = "Narada: Rare disease diagnosis RL environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "websockets>=12.0",
    "openai>=1.30.0",
    "python-multipart>=0.0.9",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "narada.server.app:main"

[tool.setuptools.packages.find]
where = ["src/envs"]
